--- a/dataStructure/stack/visualStackQueue.html
+++ b/dataStructure/stack/visualStackQueue.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Stack using Array</title>
-    <link rel="stylesheet" href="/data Structure/stack/style.css" />
+    <link rel="stylesheet" href="../stack/style.css" />
   </head>
 
   <body>
