Fixed graph steps

--- a/dataStructure/stack/visualStackQueue.html
+++ b/dataStructure/stack/visualStackQueue.html
@@ -1,10 +1,62 @@
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Stack using Array</title>
-    <link rel="stylesheet" href="/data Structure/stack/style.css" />
+
+    <link rel="stylesheet" href="/dataStructure/stack/style.css" />
   </head>
 
-  <body>
+  <body class="bg-blue-100">
+    <!--
+    <nav class="shadow bg-white">
+      <div class="mx-auto container">
+        <div class="flex justify-between items-center px-4 py-2">
+          <div class="flex items-center">
+            <h1 class="font-bold text-2xl ml-2">VisualAlgorithm</h1>
+          </div>
+          <div class="flex items-center space-x-2">
+            <div class="font-bold text-lg">
+              <label>Select Algorithm</label>
+              <select
+                id="selectAlgorithm"
+                class="bg-white border border-gray-400 rounded-lg shadow-md px-4 py-2"
+              >
+                <option value="">Select An Algorithm</option>
+                <option value="bubbleSort">Bubble Sort</option>
+                <option value="selectionSort">Selection Sort</option>
+                <option value="insertionSort">Insertion Sort</option>
+              </select>
+            </div>
+
+            <button
+              class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg"
+            >
+              Visualize
+            </button>
+            <button
+              class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg"
+            >
+              Visualize
+            </button>
+
+            <div>
+             
+              <button
+                type="button"
+                id="randomArray"
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg"
+              >
+                Random Array
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+  -->
     <!-- Wrapper for whole HTML document -->
     <div class="wrapper">
       <div id="container">
