--- a/graph/graph_new.html
+++ b/graph/graph_new.html
@@ -97,7 +97,7 @@
             />
             <input
               type="text"
-              id="startNode"
+              id="endNode"
               value="Destination"
               class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg"
             />
@@ -209,6 +209,10 @@
     <script type="text/javascript" src="../js/priorityQueue.js"></script>
     <script type="text/javascript" src="../js/buildGraph.js"></script>
     <script type="text/javascript" src="../js/visualizeGraphAlog.js"></script>
+    <script
+      type="text/javascript"
+      src="../graph/js/selectionHelper.js"
+    ></script>
     <script type="text/javascript">
       let grid = {};
 
@@ -244,12 +248,13 @@
       ];
       grid["3"] = [[4, 2]];
       grid["4"] = [[5, 2]];
+      grid["5"] = [];
 
       var graph = new buildGraph(graphInfob, grid);
       //var steps = graph.getWeightedDijkstraSteps(1, 5);
 
       var steps = graph.getUnWeightedDfsSteps(1, 5);
-
+      dbg(steps);
       //var steps = graph.getWeightedBFS(1, 5);
 
       var container = document.getElementById("container");
@@ -270,7 +275,6 @@
       }
 
       editor.on("change", function (delta) {
-        //get value type
         let value = editor.getValue();
 
         if (value.length == undefined) {
@@ -281,13 +285,38 @@
           visDfs.init(container, graph.getGraph(), options);
         }
       });
+      /*
+    1 2
+2 3
+3 4
+4 5
+5 6
+2 4
+5 7
+7 8
+6 8
+*/
 
       $("#start").click(function () {
         //select start node and end node and calling method;
-        var start = $("#startNode").val();
-        var end = $("#endNode").val();
-        var steps = graph.getUnWeightedBfsSteps(start, end);
-        visDfs.init(container, graph.getGraph(), options);
+        let source = parseInt($("#startNode").val());
+        let destination = parseInt($("#endNode").val());
+        let select = "Dijkstra";
+
+        if (select == "BFS") {
+          steps = graph.getUnWeightedBfsSteps(source, destination);
+          visDfs.setSteps(steps);
+          visDfs.init(container, graph.getGraph(), options);
+        } else if (select == "DFS") {
+          steps = graph.getUnWeightedDfsSteps(source, destination);
+          visDfs.setSteps(steps);
+          visDfs.init(container, graph.getGraph(), options);
+        } else if (select == "Dijkstra") {
+          steps = graph.getWeightedDijkstraSteps(source, destination);
+          visDfs.setSteps(steps);
+          visDfs.init(container, graph.getGraph(), options);
+        }
+        visualize();
       });
 
       $("#selectAlgorithm").on("change", function () {
@@ -303,29 +332,30 @@
         $("#bestCase").html(selectedAlgorithm.worstTime);
         $("#spaceComplexity").html(selectedAlgorithm.spaceComplexity);
       });
-      /*
-    let isFirstStep = true;
 
-    function startAnimation() {
-      if (!isFirstStep) {
-        visDfs.releaseStep();
+      function visualize() {
+        let isFirstStep = true;
+
+        function startAnimation() {
+          if (!isFirstStep) {
+            visDfs.releaseStep();
+          }
+
+          if (!visDfs.isStepAvailable()) {
+            clearInt();
+            return;
+          }
+
+          visDfs.nextStep();
+          isFirstStep = false;
+        }
+
+        const myInt = setInterval(startAnimation, 2000);
+
+        function clearInt() {
+          clearInterval(myInt);
+        }
       }
-
-      if (!visDfs.isStepAvailable()) {
-        clearInt();
-        return;
-      }
-
-      visDfs.nextStep();
-      isFirstStep = false;
-    }
-
-    const myInt = setInterval(startAnimation, 2000);
-
-    function clearInt() {
-      clearInterval(myInt);
-    }
-    */
     </script>
   </body>
 </html>
