modified expression tree

--- a/dataStructure/stack/visualStackQueue.html
+++ b/dataStructure/stack/visualStackQueue.html
@@ -59,7 +59,7 @@
   -->
     <!-- Wrapper for whole HTML document -->
     <div class="wrapper">
-      <div id="container">
+      <div class="container">
         <!-- ======= This is Canvas area ========= -->
         <div id="canvas" class="box box-full">
           <h1 style="text-align: center; color: #000000">
@@ -119,7 +119,7 @@
         <!--======== Canvas area ends here ====== -->
 
         <!-- ================ input box =============== -->
-        <div id="container">
+        <div class="container">
           <!-- Form Inputs -->
           <div class="inputs">
             <h2 style="text-align: center; color: #000000; padding-top: 5px">
