--- a/sort/index.html
+++ b/sort/index.html
@@ -39,6 +39,7 @@
                         <option value="bubbleSort">Bubble Sort</option>
                         <option value="selectionSort">Selection Sort</option>
                         <option value="insertionSort">Insertion Sort</option>
+                        <option value="mergeSort">Merge Sort</option>
                     </select>
                 </div>
 
